added login and get me endpoints

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=password
 MYSQL_HOST_PORT=3308
 MYSQL_CONTAINER_PORT=3306
+
+JWT_TOKEN_KEY=p309k12u4bbxznm32rtb12498752bt5m3
