--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "mysql": "^2.18.1",
     "objection": "^3.0.0"
